--- a/css/digitaltwin.css
+++ b/css/digitaltwin.css
@@ -1,293 +1,104 @@
-html,body{
+.digital-top {
+    display: grid;
+    grid-template-columns: 3fr 6fr 3fr;
+    gap: var(--grid-gap);
+    align-items: stretch;
+}
+
+.digital-col {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.digital-figure {
+    width: 100%;
     height: 100%;
-    width: 100%;
-}
-.data{
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to right, #04187d, #077e8e, #04187d);
-    min-width: 1366px;
-}
-.data>.data-title{
-    width: 100%;
-    height: 105px;
-    padding: 30px 0 35px 0;
-    box-sizing: border-box;
+    object-fit: contain;
 }
 
-.data>.data-title>.title-center {
-    width: 440px;
-    height: 40px;
-    box-sizing: border-box;
-    border-right: 5px solid #0089ff;
-    border-left: 5px solid #0089ff;
+.viewer-col {
+    padding: 24px;
+    gap: 16px;
+}
+
+.viewer-stage {
+    flex: 1;
+    min-height: 420px;
+    border-radius: 18px;
+    background: rgba(6, 19, 36, 0.82);
+    border: 1px solid rgba(91, 189, 247, 0.12);
     position: relative;
-    /* 设置为相对定位，以便伪元素定位 */
+    overflow: hidden;
 }
 
-.data>.data-title>.title-center::before {
-    content: "轮毂检测设备数字孪生平台";
-    /* 要显示的文字内容 */
-    position: absolute;
-    /* 绝对定位 */
-    top: 50%;
-    transform: translate(10%, -55%);
-    /* 精确居中 */
-    color: #8aceeb;
-    font-size: 30px;
-    font-weight: 800;
-}
-.data>.data-title>.title-left, 
-.data>.data-title>.title-right{
-    width:calc(50% - 220px);
-    height: 3px;
-    background: #0089ff;
-    margin-top: 18px;
+.digital-bottom {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    gap: var(--grid-gap);
 }
 
-.data>.data-content{
-    width: 100%;
-    height:calc(100% - 105px);
-    padding:0 20px 20px 20px ;
-    box-sizing: border-box;
-}
-.data>.data-content>.con-left{
-    width: 23.4375%;
-    height: 100%;
-}
-.data>.data-content>.con-left>.left-top{
-    width: 100%;
-    height:calc(75% - 20px);
-    margin-bottom: 20px;
-    position: relative;
-}
-
-.data>.data-content>.con-left>.left-top>.info{
-    height:62%;
-    width: 100%;
-    border: 1px solid #20558b;
-    /*border-radius: 4px;*/
-    box-sizing: border-box;
-    position: relative;
-    background-color: #1b0648;
-}
-
-.data>.data-content>.con-left>.left-top>.info>.info-title{
-    width: 158px;
-    height: 43px;
-    background: url('../img/info-title.png') no-repeat;
-    position: absolute;
-    top: -22px;
-    left:50%;
-    margin-left: -74px;
-    color:#fff;
-    font-size: 18px;
-    font-weight: 600;
-    line-height: 43px;
+.digital-card {
     text-align: center;
-    
-}
-.data>.data-content>.con-left>.left-top>.info>.info-main{
-    width: 100%;
-    height: 80% ;
-}
-.data>.data-content>.con-left>.left-top>.info>.info-main>div{
-    width: 275px;
-    height: 25%;
-    background: url('../img/info-text.png') no-repeat;
-    margin: 8px auto;
-}
-.data>.data-content>.con-left>.left-top>.info>.info-main>div.info-1{
-    margin-top: 40px;
-}
-.data>.data-content>.con-left>.left-top>.info>.info-main .info-img{
-    width: 100px;
-    height: 60px;
-    position: relative;
-}
-.data>.data-content>.con-left>.left-top>.info>.info-main .info-img>img{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-left: -24px;
-    margin-top: -24px;
-}
-.data>.data-content>.con-left>.left-top>.info>.info-main .info-text{
-    width: 175px;
-    height: 70px;
-    padding-left: 30px;
-    padding-top: 16px;
-    box-sizing: border-box;
-}
-.data>.data-content>.con-left>.left-top>.info>.info-main .info-text>p:nth-child(1){
-    color:#fff;
-    font-weight: 600;
-    font-size: 14px;
-}
-.data>.data-content>.con-left>.left-top>.info>.info-main>.info-1> .info-text>p:nth-child(2){
-    font-weight: 600;
-    color:#ffff44;
-    font-size: 22px;
-}
-.data>.data-content>.con-left>.left-top>.info>.info-main>.info-2> .info-text>p:nth-child(2){
-    font-weight: 600;
-    color:#25f3e6;
-    font-size: 22px;
-}
-.data>.data-content>.con-left>.left-top>.info>.info-main>.info-3> .info-text>p:nth-child(2){
-    font-weight: 600;
-    color:#f84a4a;
-    font-size: 22px;
-}
-.data>.data-content>.con-left>.left-top>.info>.info-main>.info-4> .info-text>p:nth-child(2){
-    font-weight: 600;
-    color:#f5c847;
-    font-size: 22px;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    min-height: 180px;
 }
 
-.data>.data-content>.con-left>.left-top>.top-bottom{
-    height:calc(38% - 20px);
-    width: 100%;
-    background-color: #1b0648;
-    margin-top: 20px;
-    border: 1px solid #20558b;
-    box-sizing: border-box;
-    position: relative;
+.digital-card .card-body {
+    max-width: 360px;
+    margin: 0 auto;
+    color: rgba(232, 243, 255, 0.86);
 }
 
-
-
-.data>.data-content>.con-left>.left-bottom{
-    width: 100%;
-    height: 25%;
-    background-color: #1b0648;
-    border: 1px solid #20558b;
-    box-sizing: border-box;
-    position: relative;
-}
-.data>.data-content>.con-center{
-    width: 74.425%;
-    height: 100%;
-    margin-left: 20px;
-    box-sizing: border-box;
-    position: relative;
+.workflow-card {
+    gap: 14px;
 }
 
-.data>.data-content>.con-center>.map-num{
-    width: 500px;
-    height: 120px;
-    position: absolute;
-    top: 15px;
-    left:50px;
-    z-index: 1000;
-}
-.data>.data-content>.con-center>.map-num>p{
-    font-size: 28px;
-    font-weight: 600;
-    color:#dce3e9;
-}
-
-
-.data>.data-content>.con-center>.cen-top{
-    width: 100%;
-    height:calc(100%);
-    margin-bottom: 20px;
-    background-color: rgba(10, 10, 97, 0.5);
-    background-size: 100% 100%;
-    border: 1px solid #0089ff;
-    border-radius: 4px;
-    box-sizing: border-box;
-    
-}
-
-
-.data>.data-content .title{
-    height: 35px;
-    line-height: 35px;
-    width: 100%;
-    color:#fff;
-    font-weight: 600;
-    padding-left: 15px;
-    box-sizing: border-box;
-}
-.data>.data-content .charts{
-    width: 100%;
-    height:calc(100% - 35px);
-}
-
-.data>.data-content img.bj-1{
-    position: absolute;
-    left:-1px;
-    top:-1px;
-}
-.data>.data-content img.bj-2{
-    position: absolute;
-    right:-1px;
-    top:-1px;
-}
-.data>.data-content img.bj-3{
-    position: absolute;
-    right:-1px;
-    bottom:-1px;
-}
-.data>.data-content img.bj-4{
-    position: absolute;
-    left:-1px;
-    bottom:-1px;
-}
-
-.button-container {
+.workflow-list {
+    margin: 0;
+    padding-left: 20px;
     display: flex;
-    margin-left: 50px;
+    flex-direction: column;
+    gap: 8px;
+    color: rgba(232, 243, 255, 0.86);
+    line-height: 1.8;
 }
 
-.button-container-right {
-    display: flex;
-    margin-right: 50px;
-}
-
-.btn {
-    padding: 10px;
-    background-color: #00008B;
-    color: white;
-    border: none;
-    
-    cursor: pointer;
-    font-size: 16px;
+.workflow-list li::marker {
+    color: var(--accent);
     font-weight: 600;
-    margin-top: -1%;
-    width: 200px;
-    height: 40px;
 }
 
-.btnr {
-    padding: 10px;
-    background-color: #00008B;
-    color: white;
-    border: none;
-    
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: 600;
-    margin-top: -9.9%;
-    width: 200px;
-    height: 40px;
+@media (max-width: 1080px) {
+    .digital-top {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+    .digital-top .digital-col:first-child,
+    .digital-top .digital-col:last-child {
+        grid-column: span 1;
+    }
+    .viewer-stage {
+        min-height: 360px;
+    }
 }
 
-.btn:hover {
-    background-color: #6a6aef;
+@media (max-width: 840px) {
+    .digital-top {
+        grid-template-columns: 1fr;
+    }
+    .digital-bottom {
+        grid-template-columns: 1fr;
+    }
+    .digital-card {
+        min-height: 160px;
+    }
 }
 
-.btnr:hover {
-    background-color: #6a6aef;
-}
-
-.fr {
-    text-align: right;
-    /* 右侧对齐 */
-}
-
-
-.button-container-right {
-    text-align: right;
+canvas.viewer-canvas {
+    width: 100% !important;
+    height: 100% !important;
 }
